Configure Docker build to support both Qt5 and Qt6 with flexible QMAKE selection. Fix Qt6 dependencies by adding qt6-qpa-plugins to package requirements.

--- a/docker/DockerBuildFiles/Dockerfile
+++ b/docker/DockerBuildFiles/Dockerfile
@@ -33,6 +33,7 @@ RUN apt install -y automake autoconf shtool libtool
 RUN apt install -y doxygen graphviz
 RUN apt install -y nkf universal-ctags
 
+RUN apt install -y qtbase5-dev libqt5svg5-dev
 RUN apt install -y qt6-base-dev libqt6svg6-dev libglu1-mesa-dev libbsd-dev libssl-dev
 
 COPY ./cmd /tmp/
