--- a/docker/scripts/Makefile
+++ b/docker/scripts/Makefile
@@ -9,10 +9,15 @@ build: clean
 	cd /Guitar/filetype/ && bash build-gcc.sh
 	mkdir /Guitar/_build && cd /Guitar/_build && qmake6 "CONFIG+=release" /Guitar/Guitar.pro && make -j8
 
+build5: clean
+	cd /Guitar ; ruby prepare.rb
+	cd /Guitar/filetype/ && QMAKE=qmake bash build-gcc.sh
+	mkdir /Guitar/_build && cd /Guitar/_build && qmake6 "CONFIG+=release" /Guitar/Guitar.pro && make -j8
+
 deb: build
 	ruby make-deb.rb
 
-appimage: build
+appimage: build5
 	bash make-appimage.sh
 
 doxy:
