fix build scripts

--- a/docker/scripts/Makefile
+++ b/docker/scripts/Makefile
@@ -14,8 +14,9 @@ build5: clean
 	cd /Guitar/filetype/ && QMAKE=qmake bash build-gcc.sh
 	mkdir /Guitar/_build && cd /Guitar/_build && qmake6 "CONFIG+=release" /Guitar/Guitar.pro && make -j8
 
-deb: build
-	ruby make-deb.rb
+deb:
+	cd /Guitar/packaging/deb && ruby mk-deb.rb
+	#ruby make-deb.rb
 
 appimage: build5
 	bash make-appimage.sh
